apps += [
  {
    'id': '003',
    'name': 'pulse_counter',
    'c_files': files('main.c'),
    'variants': [
      {
        'name': '4_messages',
        'c_args': [
          '-DMESSAGES_PER_DAY=4'
        ],
      },
      {
        'name': '8_messages',
        'c_args': [
          '-DMESSAGES_PER_DAY=8'
        ],
      },
    ],
  },
]
